fix visibility of original css class

--- a/admin_config/templates/admin/base_site.html
+++ b/admin_config/templates/admin/base_site.html
@@ -114,6 +114,11 @@ vertical-align: middle;
 #content-related{
     border-radius: 5px;
 }
+
+.inline-group .tabular td.original p{
+    visibility: hidden;
+}
+
 </style>
 {% endblock %}
 
