added mock report

--- a/admin_config/templates/admin/customIndex.html
+++ b/admin_config/templates/admin/customIndex.html
@@ -47,6 +47,7 @@
                         <option value="this-month">Este mes</option>
                         <option selected value="this-year">Este año</option>
                         <option value="all">Todos los tiempos</option>
+                        <option value="test">Reporte de prueba</option>
                     </select>
                 </div>
 
